--- a/resources/ui_files/ui/save_results.ui
+++ b/resources/ui_files/ui/save_results.ui
@@ -10,22 +10,47 @@
     <height>150</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>150</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Сохранение результатов</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Название эксперимента</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="name_le"/>
+    <widget class="QLineEdit" name="name_le">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Сохранить график как</string>
      </property>
@@ -33,6 +58,12 @@
    </item>
    <item row="1" column="1">
     <widget class="QComboBox" name="graph_save_type_cb">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <item>
       <property name="text">
        <string>Изображение (.jpg)</string>
@@ -47,6 +78,12 @@
    </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="save_btn">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Сохранить</string>
      </property>
