--- a/resources/ui_files/ui/settings_wnd.ui
+++ b/resources/ui_files/ui/settings_wnd.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>240</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>240</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Настройки</string>
@@ -16,6 +22,12 @@
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Ускорение свободного падения g (м/с2)</string>
      </property>
@@ -23,6 +35,12 @@
    </item>
    <item row="0" column="1">
     <widget class="QDoubleSpinBox" name="g_dsb">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
      <property name="suffix">
       <string/>
      </property>
@@ -45,6 +63,12 @@
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_2">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Анимировать траекторию движения тела</string>
      </property>
@@ -52,6 +76,11 @@
    </item>
    <item row="2" column="1">
     <widget class="QCheckBox" name="is_animated_chb">
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -62,6 +91,12 @@
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_3">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Время отрисовки графика (с)</string>
      </property>
@@ -69,6 +104,12 @@
    </item>
    <item row="1" column="1">
     <widget class="QDoubleSpinBox" name="graph_time_dsb">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
      <property name="decimals">
       <number>1</number>
      </property>
@@ -88,6 +129,12 @@
    </item>
    <item row="3" column="0">
     <widget class="QPushButton" name="save_btn">
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Сохранить и закрыть</string>
      </property>
