--- a/release/resources/ui_files/ui/about_shot_wnd.ui
+++ b/release/resources/ui_files/ui/about_shot_wnd.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>569</width>
-    <height>411</height>
+    <width>550</width>
+    <height>400</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>550</width>
+    <height>400</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>О броске</string>
@@ -164,7 +170,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -182,7 +189,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -200,7 +208,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -218,7 +227,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -236,7 +246,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -254,7 +265,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -272,7 +284,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -290,7 +303,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -308,7 +322,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -326,7 +341,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
@@ -344,7 +360,8 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>11</pointsize>
+       <family>Times New Roman</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="decimals">
